# ml-clustering-lab

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_clustering.ipynb  03_comparison.ipynb
src/ml_clustering_lab/: __init__.py  cli.py  config.py
src/ml_clustering_lab/clustering/: __init__.py  agglomerative.py  base.py  dbscan.py  evaluation.py  hyperparams.py  kmeans.py  mean_shift.py  optimal_k.py
src/ml_clustering_lab/datasets/: __init__.py  generators.py  loaders.py  registry.py
src/ml_clustering_lab/pipeline/: __init__.py  run_compare.py  run_single.py
src/ml_clustering_lab/preprocessing/: __init__.py  cleaning.py  feature_selection.py  scaling.py
src/ml_clustering_lab/stats/: __init__.py  descriptive.py  distributions.py
src/ml_clustering_lab/utils/: __init__.py  io.py  logging.py
src/ml_clustering_lab/visualization/: __init__.py  embeddings.py  plots.py
tests/: test_cli.py  test_clustering.py  test_hyperparams.py  test_io.py  test_loaders.py  test_optimal_k.py  test_pipeline.py  test_preprocessing.py  test_stats.py  test_visualization.py
