# =============================================================================
# ml-clustering-lab — pyproject.toml
# =============================================================================
# Build system: setuptools (PEP 517/518 compatible)
# =============================================================================

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "ml-clustering-lab"
version = "0.1.0"
description = "Laboratório modular de clustering e análise estatística descritiva em Python."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "thimenezes14" }]
requires-python = ">=3.10"

# Runtime dependencies
dependencies = [
    # Core data / ML
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "scipy>=1.13",

    # Visualisation
    "matplotlib>=3.9",
    "seaborn>=0.13",

    # CLI
    "typer[all]>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
# Extra / experimental
extras = [
    "umap-learn>=0.5",
    "plotly>=5",
    "yellowbrick>=1.5",
]
# Development / testing
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

# CLI entry point
[project.scripts]
ml-lab = "ml_clustering_lab.cli:app"

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

# ---------------------------------------------------------------------------
# Mypy (static type checker)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
